--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -5,23 +5,6 @@ title: Welcome to Middleman
 .welcome
   .logo
     = image_tag "middleman-logo.svg"
-  %h1 Middleman is Running
+  %h1 Middleman is Running with Gulp!
   %p.doc
     = link_to "Read Documentation Online", "https://middlemanapp.com", target: "_blank"
-
-.modal
-  %label{:for => "modal-1"}
-    .modal-trigger Click for Modal
-  %input#modal-1.modal-state{:type => "checkbox"}/
-  .modal-fade-screen
-    .modal-inner
-      .modal-close{:for => "modal-1"}
-      %h1 Modal Title
-      %p.modal-intro Intro text lorem ipsum dolor sit ametm, quas, eaque facilis aliquid cupiditate tempora cumque ipsum accusantium illo modi commodi  minima.
-      %p.modal-content Body text lorem ipsum dolor ipsum dolor sit sit possimus amet, consectetur adipisicing elit. Itaque, placeat, explicabo, veniam quos aperiam molestias eriam molestias molestiae suscipit ipsum enim quasi sit possimus quod atque nobis voluptas earum odit accusamus quibusdam. Body text lorem ipsum dolor ipsum dolor sit sit possimus amet.
-
-%br
-%br
-%br
-
-#today
