Add jQuery and Moment.js

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -6,5 +6,6 @@ title: Welcome to Middleman
   .logo
     = image_tag "middleman-logo.svg"
   %h1 Middleman is Running with Gulp!
+  .today
   %p.doc
     = link_to "Read Documentation Online", "https://middlemanapp.com", target: "_blank"
