Add partials dir.

--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -1,6 +1,6 @@
 !!!
 %html
   %head
-    = partial "head_contents"
+    = partial "partials/head_contents"
   %body{ class: page_classes }
     = yield
