Update full_title helper.

--- a/source/partials/_head_contents.html.haml
+++ b/source/partials/_head_contents.html.haml
@@ -26,7 +26,7 @@
   = tag "meta", property: "og:description", content: og_desc
   = tag "meta", property: "og:image", content: og_default_image
 
-%title= full_title(page_title)
+%title= full_title(page_title, site_title)
 
 -# = partial "partials/analytics" if production?
 -# = favicon_tag "images/favicon.png"
