Correct favicon path.

--- a/source/partials/_head_contents.html.haml
+++ b/source/partials/_head_contents.html.haml
@@ -29,7 +29,7 @@
 %title= full_title(page_title, site_title)
 
 -# = partial "partials/analytics" if production?
--# = favicon_tag "images/favicon.png"
+-# = favicon_tag "favicon.ico"
 -# = tag "link", rel: "apple-touch-icon", href: "images/apple-touch-icon.png"
 = stylesheet_link_tag :site
 = javascript_include_tag :bundle, async: !development?
