Use image_path helper for touch icon.

--- a/source/partials/_head_contents.html.haml
+++ b/source/partials/_head_contents.html.haml
@@ -30,6 +30,6 @@
 
 -# = partial "partials/analytics" if production?
 -# = favicon_tag "favicon.ico"
--# = tag "link", rel: "apple-touch-icon", href: "images/apple-touch-icon.png"
+-# = tag "link", rel: "apple-touch-icon", href: image_path("apple-touch-icon.png")
 = stylesheet_link_tag :site
 = javascript_include_tag :bundle, async: !development?
