--- a/source/partials/_head_contents.html.haml
+++ b/source/partials/_head_contents.html.haml
@@ -15,8 +15,12 @@
 = tag "meta", content: "IE=edge", "http-equiv" => "X-UA-Compatible"
 = tag "meta", content: "width=device-width, initial-scale=1.0", name: "viewport"
 = tag "meta", name: "author", content: site_author
-= tag "meta", name: "description", content: site_desc
 = tag "meta", name: "robots", content: smart_robots(page_path, current_env)
+
+- if content_for?(:meta_desc)
+  = yield_content :meta_desc
+- else
+  = tag "meta", name: "description", content: site_desc
 
 - if content_for?(:og_tags)
   = yield_content :og_tags
